<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <TextView
        android:id="@+id/restoreMessage"
        android:text="@string/restore_message"
        android:textColor="@color/mainText"
        style="@style/MessageText"
        android:layout_alignEnd="@+id/addFile" />

    <Spinner
        android:id="@+id/spinner_files"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/restoreMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_inputs"
        android:drawableRight="@drawable/ic_add_file_dark"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/select_file"
        android:textColor="@color/mainText"
        android:textSize="15sp" />



    <LinearLayout
        android:layout_below="@+id/addFile"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnRestore"
            android:text="@string/restore_profile"
            style="@style/ButtomBlue"/>
    </LinearLayout>


</RelativeLayout>