<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">




    <TextView
        android:id="@+id/folderMessage"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/set_folder_message"
        android:textColor="@color/mainText"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnSelectFolder"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/folderMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_inputs"
        android:drawableRight="@drawable/ic_folder"
        android:elevation="2dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="addFile"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:text="@string/select_folder"
        android:textColor="@color/mainText"
        android:textSize="14sp" />



    <Button
        android:id="@+id/btnSetFolder"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button_blue_border"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="tryRestore"
        android:text="@string/set_folder"
        android:textColor="@color/mainBlue"
        android:textSize="14sp" />

</RelativeLayout>