<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <TextView
        android:id="@+id/backupMessage"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/backup_profile_message"
        style="@style/MessageText"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/backupMessage"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_inputs"
        android:gravity="left|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:textColor="@color/mainText"
        android:textColorHint="@color/hintInput"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/repeat_password_layout"
        android:layout_below="@+id/password"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_inputs"
            android:gravity="left|center_vertical"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="@color/mainText"
            android:textColorHint="@color/hintInput"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/showPassword"
            android:layout_marginTop="14dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_watch"
            android:background="@color/transparent"
            />


    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/repeat_password_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSetPassword"
            android:text="@string/set_password"
            style="@style/ButtonWhiteBorderBlue"/>
    </LinearLayout>

</RelativeLayout>