<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:paddingLeft="16dp"
            android:textAllCaps="true"
            android:gravity="center_vertical"
            android:background="#F0F0F0"
            android:text="@string/security"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_backup"
                android:background="@drawable/settings_items"
                android:stateListAnimator="@null"
                android:padding="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:height="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="#444444"
                android:text="@string/backup_profile"/>
            <Button
                android:id="@+id/btn_restore"
                android:background="@drawable/settings_items"
                android:stateListAnimator="@null"
                android:padding="8dp"
                android:height="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="#444444"
                android:text="@string/restore_profile"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>